--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <span class="h-2.5 w-2.5 rounded-full bg-red-500"></span>
             <span class="h-2.5 w-2.5 rounded-full bg-amber-400"></span>
             <span class="h-2.5 w-2.5 rounded-full bg-emerald-400"></span>
-            <span class="ml-3 text-xs text-slate-400">derrickswebservice.run.place/preview/</span>
+            <span class="ml-3 text-xs text-slate-400">derrickswebservices.github.io/my-awesome-site/</span>
           </div>
           <div class="p-6 space-y-4">
             <div class="h-6 w-32 rounded-full bg-slate-800 mb-2"></div>
@@ -366,7 +366,7 @@
           <div>
             <label class="block text-xs text-slate-300 mb-1">Desired Website Name</label>
             <input type="text" id="website_name" name="website_name" class="w-full rounded-lg bg-slate-950 border border-slate-800 px-3 py-2 text-xs text-slate-100 focus:outline-none focus:border-indigo-500" placeholder="my-awesome-site" required />
-            <p class="text-[10px] text-slate-500 mt-1 italic">Notice: All website URLs will look like this: <span class="text-indigo-400">derrickswebservice.run.place/website-name/</span></p>
+            <p class="text-[10px] text-slate-500 mt-1 italic">Notice: All website URLs will look like this: <span class="text-indigo-400">derrickswebservices.github.ip/website-name/</span></p>
           </div>
 
           <div>
@@ -449,7 +449,7 @@
             <ul class="text-[11px] text-slate-400 space-y-1.5 list-disc list-inside leading-relaxed mb-4">
               <li>Any inappropriate websites or updates to websites will result in a site removal without a refund.</li>
               <li>Modifying the site or source code without explicit permission will result in site removal without refund.</li>
-              <li>Attempting to hack or exploit any site under the <span class="text-indigo-400">derrickswebservice.run.place</span> domain will result in an immediate takedown of all your sites without refund.</li>
+              <li>Attempting to hack or exploit any site under the <span class="text-indigo-400">derrickswebservices.github.io</span> domain will result in an immediate takedown of all your sites without refund.</li>
               <li>Development will only begin once the initial down payment (Cash Only) has been processed.</li>
               <li>Clients must provide all required content (text/images) in a timely manner.</li>
               <li>Maintenance plans cover minor bug fixes and small text updates; major changes require a separate quote.</li>
