--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
     </p>
 
     <div class="flex flex-col sm:flex-row items-center justify-center gap-4 w-full">
-        <a href="https://derrickswebservice.github.io" class="w-full sm:w-auto inline-flex items-center justify-center px-6 py-3 rounded-xl bg-indigo-500 hover:bg-indigo-400 text-sm font-semibold text-white transition-all shadow-lg shadow-indigo-500/20 active:scale-95">
+        <a href="https://derrickswebservices.github.io" class="w-full sm:w-auto inline-flex items-center justify-center px-6 py-3 rounded-xl bg-indigo-500 hover:bg-indigo-400 text-sm font-semibold text-white transition-all shadow-lg shadow-indigo-500/20 active:scale-95">
             Return to Homepage
         </a>
         <button onclick="window.history.back()" class="w-full sm:w-auto inline-flex items-center justify-center px-6 py-3 rounded-xl border border-slate-800 bg-slate-900/50 hover:bg-slate-900 hover:border-slate-700 text-sm font-semibold text-slate-300 transition-all active:scale-95">
