--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <div class="p-2 bg-indigo-500 rounded-lg"><svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg></div>
                 <div>
                     <p class="text-[10px] text-slate-500 font-bold uppercase tracking-widest">Email Address</p>
-                    <p class="text-xs text-white font-medium">derrickswebservice@proton.me</p>
+                    <p class="text-xs text-white font-medium">derrickswebservices@proton.me</p>
                 </div>
                 <span id="copyMsg" class="absolute right-4 top-1/2 -translate-y-1/2 text-[10px] text-emerald-400 hidden">Copied!</span>
             </div>
@@ -366,7 +366,7 @@
           <div>
             <label class="block text-xs text-slate-300 mb-1">Desired Website Name</label>
             <input type="text" id="website_name" name="website_name" class="w-full rounded-lg bg-slate-950 border border-slate-800 px-3 py-2 text-xs text-slate-100 focus:outline-none focus:border-indigo-500" placeholder="my-awesome-site" required />
-            <p class="text-[10px] text-slate-500 mt-1 italic">Notice: All website URLs will look like this: <span class="text-indigo-400">derrickswebservices.github.ip/website-name/</span></p>
+            <p class="text-[10px] text-slate-500 mt-1 italic">Notice: All website URLs will look like this: <span class="text-indigo-400">derrickswebservices.github.io/website-name/</span></p>
           </div>
 
           <div>
@@ -480,7 +480,7 @@
 
   <!-- Footer -->
   <footer class="border-t border-slate-900 py-6 mt-8">
-    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-3 text-xs text-slate-500">
+    <div class="max-w-6xl mx-auto px-4 flex flex-col md:row items-center justify-between gap-3 text-xs text-slate-500">
       <p>© <span id="year"></span> Web Design by Derrick. All rights reserved.</p>
       <div class="flex gap-4">
         <a href="https://derrickrichard.github.io/profile/" class="hover:text-white">Profile</a>
@@ -493,7 +493,7 @@
     document.getElementById('year').textContent = new Date().getFullYear();
 
     function copyEmail() {
-        navigator.clipboard.writeText("derrickswebservice@proton.me");
+        navigator.clipboard.writeText("derrickswebservices@proton.me");
         const msg = document.getElementById('copyMsg');
         msg.classList.remove('hidden');
         setTimeout(() => msg.classList.add('hidden'), 2000);
@@ -544,13 +544,19 @@
       statusMsg.textContent = 'Sending request...';
       statusMsg.classList.remove('hidden');
 
-      const formData = new FormData(form);
+      const data = Object.fromEntries(new FormData(form));
+      // NOTE: File uploads are not supported via AJAX by FormSubmit.co.
+      // If you need files, you must use a standard non-AJAX form submission.
+      delete data.file_upload;
 
       try {
-        const response = await fetch("https://formsubmit.co/ajax/derrickswebservice@proton.me", {
+        const response = await fetch("https://formsubmit.co/ajax/derrickswebservices@proton.me", {
           method: "POST",
-          body: formData,
-          headers: { 'Accept': 'application/json' }
+          headers: { 
+            'Content-Type': 'application/json',
+            'Accept': 'application/json' 
+          },
+          body: JSON.stringify(data)
         });
 
         if (response.ok) {
