--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           <div>
             <label class="block text-xs text-slate-300 mb-1">Desired Website Name</label>
             <input type="text" id="website_name" name="website_name" class="w-full rounded-lg bg-slate-950 border border-slate-800 px-3 py-2 text-xs text-slate-100 focus:outline-none focus:border-indigo-500" placeholder="my-awesome-site" required />
-            <p class="text-[10px] text-slate-500 mt-1 italic">Notice: All website URLs will look like this: <span class="text-indigo-400">derrickswebservices.github.ip/website-name/</span></p>
+            <p class="text-[10px] text-slate-500 mt-1 italic">Notice: All website URLs will look like this: <span class="text-indigo-400">derrickswebservices.github.io/website-name/</span></p>
           </div>
 
           <div>
