--- a/index.html
+++ b/index.html
@@ -239,17 +239,15 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="max-w-6xl mx-auto px-4 py-16 border-t border-slate-900">
-    <div class="max-w-3xl">
-      <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Who I Am</h2>
-      <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-6 shadow-lg">
-        <p class="text-sm text-slate-200 mb-3">
-          I’m a student web designer who focuses on building clean, modern, and easy‑to‑use websites. I care about making things look professional without overcomplicating them. Every site I build is designed from scratch, tailored to the person or group I’m working with, and optimized to work smoothly on any device.
-        </p>
-        <p class="text-sm text-slate-200">
-          I’ve worked on personal projects, school‑related sites, and custom pages for people who want something that feels polished and trustworthy. My goal is simple: create websites that make you look good and help you share your message clearly.
-        </p>
-      </div>
+  <section id="about" class="max-w-3xl mx-auto px-4 py-16 border-t border-slate-900">
+    <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Who I Am</h2>
+    <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-6 shadow-lg">
+      <p class="text-sm text-slate-200 mb-3">
+        I’m a student web designer who focuses on building clean, modern, and easy‑to‑use websites. I care about making things look professional without overcomplicating them. Every site I build is designed from scratch, tailored to the person or group I’m working with, and optimized to work smoothly on any device.
+      </p>
+      <p class="text-sm text-slate-200">
+        I’ve worked on personal projects, school‑related sites, and custom pages for people who want something that feels polished and trustworthy. My goal is simple: create websites that make you look good and help you share your message clearly.
+      </p>
     </div>
   </section>
 
@@ -264,13 +262,13 @@
         <div class="rounded-2xl border border-indigo-500/70 bg-slate-900/70 p-6 shadow-xl">
           <p class="text-xs font-semibold tracking-[0.2em] text-indigo-400 uppercase mb-4">Initial Down Payments</p>
           
-          <!-- New Pricing Table -->
+          <!-- Pricing Table -->
           <div class="grid grid-cols-2 gap-y-2 mb-6 border-b border-slate-800 pb-4">
             <div class="text-sm text-slate-200 font-medium">Portfolio</div> <div class="text-sm text-indigo-300 text-right">$15</div>
             <div class="text-sm text-slate-200 font-medium">Club / Org</div> <div class="text-sm text-indigo-300 text-right">$20</div>
-            <div class="text-sm text-slate-200 font-medium Event / Fundraiser">Event / Fundraiser</div> <div class="text-sm text-indigo-300 text-right">$15</div>
+            <div class="text-sm text-slate-200 font-medium">Event / Fundraiser</div> <div class="text-sm text-indigo-300 text-right">$15</div>
             <div class="text-sm text-slate-200 font-medium">Small Business</div> <div class="text-sm text-indigo-300 text-right">$25</div>
-            <div class="text-sm text-slate-200 font-medium Personal Site">Personal Site</div> <div class="text-sm text-indigo-300 text-right">$20</div>
+            <div class="text-sm text-slate-200 font-medium">Personal Site</div> <div class="text-sm text-indigo-300 text-right">$20</div>
             <div class="text-sm text-slate-200 font-medium italic">Other</div> <div class="text-sm text-indigo-300 text-right">Quote only</div>
           </div>
 
@@ -362,7 +360,6 @@
             </div>
           </div>
 
-          <!-- New Website Name Field -->
           <div>
             <label class="block text-xs text-slate-300 mb-1">Desired Website Name</label>
             <input type="text" id="website_name" name="website_name" class="w-full rounded-lg bg-slate-950 border border-slate-800 px-3 py-2 text-xs text-slate-100 focus:outline-none focus:border-indigo-500" placeholder="my-awesome-site" required />
@@ -413,7 +410,7 @@
             <textarea id="maintenance_needs" name="maintenance_needs" rows="2" class="w-full rounded-lg bg-slate-950 border border-slate-800 px-3 py-2 text-xs text-slate-100 focus:outline-none focus:border-indigo-500" placeholder="If you need ongoing updates, maintenance fees will be calculated based on frequency."></textarea>
           </div>
 
-          <!-- Checkboxes for Signature, Favicon, and Database -->
+          <!-- Checkboxes -->
           <div class="space-y-2 py-2">
             <div class="flex items-center gap-3">
                 <input type="checkbox" id="remove_signature" name="remove_signature" class="w-4 h-4 rounded border-slate-800 bg-slate-950 accent-indigo-500" onchange="calc()">
@@ -441,9 +438,10 @@
           <div>
             <label class="block text-xs text-slate-300 mb-1">File upload (optional)</label>
             <input type="file" name="file_upload" class="w-full text-xs text-slate-300 file:mr-3 file:py-1.5 file:px-3 file:rounded-md file:border-0 file:text-xs file:font-medium file:bg-indigo-500 file:text-white hover:file:bg-indigo-400" />
+            <p class="text-[10px] text-slate-500 mt-1 italic">Note: Files cannot be sent via the quick-request form. Please email them directly after submitting.</p>
           </div>
 
-          <!-- Updated Service Terms Section -->
+          <!-- Terms -->
           <div class="pt-4 border-t border-slate-800">
             <h3 class="text-[10px] font-bold text-slate-400 uppercase tracking-widest mb-2">Service Terms & Agreement</h3>
             <ul class="text-[11px] text-slate-400 space-y-1.5 list-disc list-inside leading-relaxed mb-4">
@@ -457,7 +455,6 @@
               <li>Deposits are non-refundable once design and development work has commenced.</li>
             </ul>
 
-            <!-- Added Agreement Checkbox -->
             <div class="flex items-start gap-3 mt-4 p-3 bg-indigo-500/5 rounded-lg border border-indigo-500/20">
                 <input type="checkbox" id="agree_terms" class="w-4 h-4 mt-0.5" required>
                 <label for="agree_terms" class="text-[11px] text-indigo-300 font-semibold leading-tight">I have read and agree to all Service Terms, including the Cash-Only payment policy and site removal rules.</label>
@@ -499,7 +496,6 @@
         setTimeout(() => msg.classList.add('hidden'), 2000);
     }
 
-    // Live Price Calculation Logic
     function calc() {
         const typeSelect = document.getElementById('website_type');
         const typeBase = parseInt(typeSelect.options[typeSelect.selectedIndex].getAttribute('data-price'));
@@ -509,18 +505,15 @@
         const requireDb = document.getElementById('require_db').checked;
         const totalDisp = document.getElementById('live_total');
 
-        // Check for "Quote Only" triggers
         if (typeBase === 0 || requireDb) {
             totalDisp.textContent = "Quote Only";
             return;
         }
 
-        // Split by comma and filter out empty strings to get accurate page count
         const pagesArray = pagesInput ? pagesInput.split(',').filter(p => p.trim() !== "") : [];
         const pageCount = pagesArray.length;
 
         let total = typeBase;
-        // First page is included in base. Only add $3 for additional pages.
         if (pageCount > 1) {
             total += (pageCount - 1) * 3;
         }
@@ -545,19 +538,26 @@
       statusMsg.classList.remove('hidden');
 
       const formData = new FormData(form);
+      const data = Object.fromEntries(formData);
+      
+      // FormSubmit AJAX does not support file uploads, so we remove it from JSON payload
+      delete data.file_upload;
 
       try {
         const response = await fetch("https://formsubmit.co/ajax/derrickswebservice@proton.me", {
           method: "POST",
-          body: formData,
-          headers: { 'Accept': 'application/json' }
+          headers: { 
+            'Content-Type': 'application/json',
+            'Accept': 'application/json' 
+          },
+          body: JSON.stringify(data)
         });
 
         if (response.ok) {
-          statusMsg.textContent = 'Request sent successfully! I will contact you soon to give a final price.';
+          statusMsg.textContent = 'Request sent successfully! I will contact you soon.';
           statusMsg.className = 'text-center text-xs mt-2 text-emerald-400';
           form.reset();
-          calc(); // Reset estimate
+          calc();
           submitBtn.innerHTML = 'Sent ✅';
           setTimeout(() => {
             submitBtn.disabled = false;
@@ -565,17 +565,16 @@
             statusMsg.classList.add('hidden');
           }, 5000);
         } else {
-          throw new Error();
+          throw new Error('Server responded with error');
         }
       } catch (err) {
-        statusMsg.textContent = 'Oops! Something went wrong. Please email directly.';
+        statusMsg.textContent = 'Oops! Please email directly as the automated form is currently limited.';
         statusMsg.className = 'text-center text-xs mt-2 text-red-400';
         submitBtn.disabled = false;
         submitBtn.innerHTML = 'Send Request';
       }
     });
 
-    // Run once on load
     calc();
   </script>
 </body>
