--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
         <div class="mt-4 text-[10px] text-indigo-400 font-bold uppercase tracking-widest">View Demo →</div>
       </a>
 
+       <a href="https://nexusdatatracker.github.io" target="_blank" class="group rounded-2xl border border-slate-800 bg-slate-900/60 p-6 hover:border-indigo-500/70 hover:-translate-y-1 transition flex flex-col">
+        <h3 class="text-sm font-semibold text-white mb-2 group-hover:text-indigo-400 transition">Mellow-Fellow AI</h3>
+        <p class="text-xs text-slate-300 flex-grow">Personal data tracker made for students, with advanced features and a customizable theme.</p>
+        <div class="mt-4 text-[10px] text-indigo-400 font-bold uppercase tracking-widest">View Demo →</div>
+      </a>
+
       <a href="https://derrickrichard.github.io/FileLock/" target="_blank" class="group rounded-2xl border border-slate-800 bg-slate-900/70 p-6 hover:border-indigo-500/70 hover:-translate-y-1 transition flex flex-col">
         <h3 class="text-sm font-semibold text-white mb-2 group-hover:text-indigo-400 transition">FileLock</h3>
         <p class="text-xs text-slate-300 flex-grow">A utility to encrypt files into self-unlocking HTML pages with password recovery and expiration options.</p>
@@ -544,13 +550,18 @@
       statusMsg.textContent = 'Sending request...';
       statusMsg.classList.remove('hidden');
 
+      // FIXED: Convert FormData to JSON object for FormSubmit AJAX Compatibility
       const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
 
       try {
         const response = await fetch("https://formsubmit.co/ajax/derrickswebservice@proton.me", {
           method: "POST",
-          body: formData,
-          headers: { 'Accept': 'application/json' }
+          headers: { 
+            'Content-Type': 'application/json',
+            'Accept': 'application/json' 
+          },
+          body: JSON.stringify(data)
         });
 
         if (response.ok) {
