--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       </a>
 
        <a href="https://nexusdatatracker.github.io" target="_blank" class="group rounded-2xl border border-slate-800 bg-slate-900/60 p-6 hover:border-indigo-500/70 hover:-translate-y-1 transition flex flex-col">
-        <h3 class="text-sm font-semibold text-white mb-2 group-hover:text-indigo-400 transition">Mellow-Fellow AI</h3>
+        <h3 class="text-sm font-semibold text-white mb-2 group-hover:text-indigo-400 transition">Nexus Data Tracker</h3>
         <p class="text-xs text-slate-300 flex-grow">Personal data tracker made for students, with advanced features and a customizable theme.</p>
         <div class="mt-4 text-[10px] text-indigo-400 font-bold uppercase tracking-widest">View Demo →</div>
       </a>
