--- a/index.html
+++ b/index.html
@@ -547,12 +547,16 @@
       statusMsg.classList.remove('hidden');
 
       const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
 
       try {
-        // Changed to use FormData instead of JSON for better compatibility
         const response = await fetch("https://formsubmit.co/ajax/derrickswebservice@proton.me", {
           method: "POST",
-          body: formData 
+          headers: { 
+            'Content-Type': 'application/json',
+            'Accept': 'application/json' 
+          },
+          body: JSON.stringify(data) 
         });
 
         const result = await response.json();
@@ -573,9 +577,8 @@
           throw new Error(errorMsg);
         }
       } catch (err) {
-        // Specifically detect if the browser blocked the request (likely due to local file testing)
-        if (err.name === 'TypeError' && err.message === 'Failed to fetch') {
-          statusMsg.textContent = "Error: Browser blocked request.";
+        if (err.name === 'TypeError' || err.message.includes('fetch')) {
+          statusMsg.textContent = "Error: Connection blocked. Please disable any ad-blockers (like Brave Shields) or check your connection.";
         } else {
           statusMsg.textContent = "Oops! " + err.message;
         }
