--- a/index.html
+++ b/index.html
@@ -359,10 +359,6 @@
       <!-- Form -->
       <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-6">
         <form id="quoteForm" class="space-y-4">
-          <!-- FormSubmit Configuration -->
-          <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_subject" value="New Web Design Quote Request!">
-          <input type="hidden" name="_template" value="table">
 
           <div class="grid md:grid-cols-2 gap-4">
             <div>
@@ -543,14 +539,15 @@
       submitBtn.disabled = true;
       submitBtn.innerHTML = '<div class="loading-spinner"></div> Sending...';
       statusMsg.className = 'text-center text-xs mt-2 text-slate-400';
-      statusMsg.textContent = 'Sending request...';
+      statusMsg.textContent = 'Sending request via Formspree...';
       statusMsg.classList.remove('hidden');
 
       const formData = new FormData(form);
       const data = Object.fromEntries(formData.entries());
 
       try {
-        const response = await fetch("https://formsubmit.co/ajax/derrickswebservice@proton.me", {
+        // REPLACE 'YOUR_FORM_ID_HERE' with your real Formspree ID
+        const response = await fetch("https://formspree.io/f/xaqdbrgg", {
           method: "POST",
           headers: { 
             'Content-Type': 'application/json',
@@ -559,9 +556,7 @@
           body: JSON.stringify(data) 
         });
 
-        const result = await response.json();
-
-        if (response.ok && result.success !== "false") {
+        if (response.ok) {
           statusMsg.textContent = 'Request sent successfully! I will contact you soon.';
           statusMsg.className = 'text-center text-xs mt-2 text-emerald-400';
           form.reset();
@@ -573,15 +568,11 @@
             statusMsg.classList.add('hidden');
           }, 5000);
         } else {
-          const errorMsg = result.message || 'Submission failed.';
-          throw new Error(errorMsg);
+          const result = await response.json();
+          throw new Error(result.error || 'Submission failed.');
         }
       } catch (err) {
-        if (err.name === 'TypeError' || err.message.includes('fetch')) {
-          statusMsg.textContent = "Error: Connection blocked. Please disable any ad-blockers (like Brave Shields) or check your connection.";
-        } else {
-          statusMsg.textContent = "Oops! " + err.message;
-        }
+        statusMsg.textContent = "Oops! " + err.message + " Check if you updated your Form ID.";
         statusMsg.className = 'text-center text-xs mt-2 text-red-400';
         submitBtn.disabled = false;
         submitBtn.innerHTML = 'Send Request';
