--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
           </div>
 
           <button id="submitBtn" type="submit" class="w-full inline-flex items-center justify-center gap-2 px-4 py-2.5 rounded-lg bg-indigo-500 hover:bg-indigo-400 text-xs font-medium text-white transition disabled:opacity-50">
-            <span>Send Request</span>
+            <span>Submit Form</span>
           </button>
 
           <p id="formStatus" class="hidden text-center text-xs mt-2"></p>
